# tongsuo-mini

./: .clang-format  .gitignore  CMakeLists.txt  NOTICE  README.cn.md  README.md
.github/workflows/: ci.yml  compiler-zoo.yml
app/: minisuo.c
doc/: build.md
examples/: ascon_aead_enc.c  ascon_aead_oneshot.c  ascon_hash.c  ascon_hash_oneshot.c  hmac_ascon.c  sm3_demo.c  sm3_oneshot.c  sm4_cbc_enc.c  sm4_oneshot.c
include/internal/: ascon.h  asn1.h  log.h  mem.h  meth.h  oscore_crypto.h  pool.h  sm3.h  sm4.h
include/tongsuo/: ascon.h  error.h  hmac.h  mem.h  minisuo.h  oscore.h  oscore_cbor.h  oscore_context.h  oscore_cose.h  sm3.h  sm4.h
perf/: perf.c
src/: ascon.c  asn1.c  error.c  hmac.c  log.c  mem.c  meth.c  oscore.c  oscore_cbor.c  oscore_context.c  oscore_cose.c  oscore_crypto.c  pool.c  sm3.c  sm4.c  str.c  version.c
test/: ascon_gen_kat.c  conftest.py  dev-requirements.txt  requirements.txt  test.h  test_ascon_aead.c  test_ascon_aead.py  test_ascon_hash.c  test_ascon_hash.py  test_ascon_hmac.c  test_ascon_hmac.py  test_asn1.c  test_asn1.py  test_hmac_ascon.c  test_hmac_ascon.py  test_hmac_sm3.c  test_hmac_sm3.py  test_minisuo.py  test_oscore.c  test_oscore.py  test_sm3.c  test_sm3.py  test_sm4.py  test_sm4_api.c  tf.py
test/test_ascon_data/: ascon128_aead.txt  ascon128a_aead.txt  ascon_aead128.txt  ascon_aead128a.txt  ascon_hash.txt  ascon_hasha.txt
test/test_hmac_data/: ascon_hmac.txt  ascon_hmaca.txt  hmac_sm3.txt
test/test_sm3_data/: sm3.txt
